@@ -1,4 +1,4 @@
-// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
+﻿// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
 // 
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -12,18 +12,13 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-namespace Castle.DynamicProxy
+namespace Castle.DynamicProxy.Tests.Classes
 {
-	using System;
-
-	public class ProxyGenerationException : Exception
+	public class InheritsAbstractClassWithMethod : AbstractClassWithMethod
 	{
-		public ProxyGenerationException(string message) : base(message)
+		public override int Method()
 		{
-		}
-
-		public ProxyGenerationException(string message, Exception innerException) : base(message, innerException)
-		{
+			return 42;
 		}
 	}
 }
